--- a/tools/eie_device_server/CMakeLists.txt
+++ b/tools/eie_device_server/CMakeLists.txt
@@ -1,6 +1,12 @@
-add_executable(eie_device_server main.c)
+# Include rules
+include(FindPkgConfig)
 
-target_link_libraries(eie_device_server ${LIB_NAME})
+pkg_check_modules(CZMQ libczmq)
+link_directories(${CZMQ_LIBRARY_DIRS})
+include_directories(${CZMQ_INCLUDE_DIRS})
+
+add_executable(eie_device_server main.c)
+target_link_libraries(eie_device_server pthread ${CZMQ_LIBRARIES} ${LIB_NAME})
 
 install(
   TARGETS eie_device_server
