--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ include(utils.cmake)
 # Build flags
 set(C_WARNINGS "-Wall -Wstrict-prototypes -Wshadow -Werror")
 set(CXX_WARNINGS "-Wall -Wshadow -Werror")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu11 ${C_WARNINGS}")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu11 ${C_WARNINGS} -g")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 ${CXX_WARNINGS}")
 
 # Dependencies
