--- a/src/proyecto/eie_manager_2/docker-compose.yml
+++ b/src/proyecto/eie_manager_2/docker-compose.yml
@@ -11,6 +11,10 @@
 version: '2.4'
 
 services:
+  eie-config-manager:
+    build: ./eie_config/
+    ports:
+      - "9000:5000"
   mongodb:
     image: docker.io/mongo:4.2
     mem_limit: 256m
