--- a/src/proyecto/eie_device/tools/eie_device/CMakeLists.txt
+++ b/src/proyecto/eie_device/tools/eie_device/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(eie_device_test main.c)
 
-target_link_libraries(eie_device ${LIB_NAME})
+target_link_libraries(eie_device_test ${LIB_NAME} ${CJSON_LIBRARIES})
 
 install(
   TARGETS eie_device
